--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
     
             </tbody>
                 <!--Fifth Semester-->
-                <tbody>
+               <tbody class="current">
                     <tr>
                         <td colspan="7" class="sem">Third Year, First Semester</td>
                     </tr >
